# tes-engine

./: .gitignore  Android_Engine.mk  Android_Salmon_Engine.mk  README.md  Salmon Engine.sln
Halibut Engine/: Halibut Engine.vcxproj
Salmon Engine/: Salmon Engine.vcxproj
SalmonEngineAndroid/app/: CMakeLists.txt  build.gradle
SalmonEngineAndroid/app/src/androidTest/java/fishrungames/salmonengineandroid/: ExampleInstrumentedTest.java
SalmonEngineAndroid/app/src/main/: AndroidManifest.xml
SalmonEngineAndroid/app/src/main/java/fishrungames/salmonengineandroid/: EngineWrapper.java  GLViewAncestor.java
SalmonEngineAndroid/app/src/main/res/values/: strings.xml  styles.xml
SalmonEngineAndroid/app/src/test/java/fishrungames/salmonengineandroid/: ExampleUnitTest.java
Templates/HalibutUniversalTemplate/: AndroidManifest.xml
Templates/HalibutUniversalTemplate/assets/: shader_fragment.txt  shader_vertex.txt
Templates/HalibutUniversalTemplate/iOS/: AppDelegate.h  CustomGLKView.h  CustomGLKView.m  ViewController.h  ios_api.h  template-Info.plist
Templates/HalibutUniversalTemplate/jni/: Android.mk  Application.mk  android_api.cpp  android_api.h  main_code.cpp  main_code.h
Templates/SalmonUniversalTemplate/: .classpath  .project  AndroidManifest.xml
Templates/SalmonUniversalTemplate/assets/: bt_box_yellow.tga  droid_sans14_font_bitmap.bmp32  droid_sans14_font_bitmap.tga  droid_sans14_font_charmap.txt  gui_transparent.fragment  model.xml
Templates/SalmonUniversalTemplate/iOS/: AppDelegate.m  CustomGLKView.h  CustomGLKView.m  CustomGLKView.mm  ViewController.h  ViewController.m  ViewController.mm  ios_api.cpp  ios_api.h  main.m  template-Info.plist  template-Prefix.pch
Templates/SalmonUniversalTemplate/jni/: Android.mk  Application.mk  android_api.cpp  android_api.h  main_code.cpp  main_code.h
Templates/SalmonWallpaperTemplate/: .classpath  AndroidManifest.xml
Templates/SalmonWallpaperTemplate/assets/: gui_transparent.fragment  gui_transparent.vertex  model.xml
Templates/SalmonWallpaperTemplate/jni/: Android.mk  Application.mk  android_api.cpp  android_api.h  main_code.cpp  main_code.h
Templates/SalmonWallpaperTemplate/windows/: Template.sln
Templates/UtilsEngineTemplate/: UtilsEngineTemplateSln.sln
Templates/UtilsEngineTemplate/linux/: makefile
Templates/UtilsEngineTemplate/src/: UtilsEngineTemplate.vcxproj  linux_stuff.cpp  linux_stuff.h  main.cpp  main.h
UtilsEngine/: UtilsEngine.vcxproj
android/Engine/: Engine.sln
android/Engine/Engine/: Engine.vcxproj  Engine.vcxproj.filters
android/EngineWrapper/: EngineWrapper.androidproj
android/EngineWrapper/app/: build.gradle  build.gradle.template
android/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
android/libpng/: libpng.vcxproj  libpng.vcxproj.filters
android/zip/: zip.vcxproj  zip.vcxproj.filters
iOS/Halibut Engine/Halibut Engine.xcodeproj/: project.pbxproj
iOS/Salmon Engine/Salmon Engine/: Salmon Engine-Prefix.pch
iOS/Salmon Engine/Salmon Engine.xcodeproj/: project.pbxproj
include/: ApplicationInterface.h  Engine.h  GlobalConst.h  HalibutEngineAndroid.h  HalibutEngineInterface.h  HalibutEngineIos.h  HalibutEngineWindows.h  SalmonEngineAndroid.h  SalmonEngineInterface.h  SalmonEngineIos.h  SalmonEngineWindows.h  SalmonEngineWindowsUniversal.h
include/Animation/: SalmonAnimation.h
include/FontManager/: FontManager.h
include/FrameManager/: FrameManager.h
include/GUIManager/: ButtonWidget.h  GUIManager.h  KeyboardWidget.h  NewGuiManager.h  WidgetTemplatesImpl.h  WidgetXmlParsers.h
include/HalibutAnimation/: HalibutAnimation.h
include/LightManager/: LightManager.h
include/ModelManager/: ModelManager.h  NewModelManager.h
include/OpenGLExt/: OpenGlExt.h
include/PhysicsManager/: PhysicsManager.h
include/Render/: RenderInterface.h  RenderMisc.h  RenderParams.h
include/ScriptManager/: ScriptManager.h
include/ShaderManager/: ShaderManager.h
include/SimpleLand/: SimpleLand.h
include/SmartValueManager/: SmartValueManager.h
include/SoundManager/: SoundManagerAndroid.h  SoundManagerDataTypes.h  SoundManagerInterface.h  SoundManagerIos.h  SoundManagerWindows.h
include/TextureManager/: SalmonTexture.h
include/Utils/: BindableVar.h  JSONVectorReader.h  JpegHelper.h  ObjHelper.h  PngHelper.h  SimpleTimer.h  TgaLoader.h  ThreadUtils.h  ThreadUtilsImpl.h  Utils.h
include/Utils/Console/: Console.h  (+1 more)
src/: ApplicationInterface.cpp  GlobalConst.cpp  HalibutEngineAndroid.cpp  HalibutEngineInterface.cpp  HalibutEngineIos.cpp  HalibutEngineWindows.cpp  SalmonEngineAndroid.cpp  SalmonEngineInterface.cpp  SalmonEngineIos.cpp  SalmonEngineWindows.cpp  SalmonEngineWindowsUniversal.cpp
src/Animation/: SalmonAnimation.cpp
src/FontManager/: FontManager.cpp
src/FrameManager/: FrameManager.cpp
src/GUIManager/: ButtonWidget.cpp  GUIManager.cpp  KeyboardWidget.cpp  NewGuiManager.cpp  WidgetXmlParsers.cpp
src/HalibutAnimation/: HalibutAnimation.cpp
src/LightManager/: LightManager.cpp
src/ModelManager/: ModelManager.cpp  NewModelManager.cpp
src/OpenGLExt/: OpenGlExt.cpp
src/PhysicsManager/: PhysicsManager.cpp
src/Render/: RenderInterface.cpp  RenderMisc.cpp  RenderParams.cpp
src/ScriptManager/: ScriptManager.cpp
src/ShaderManager/: ShaderManager.cpp
src/SimpleLand/: SimpleLand.cpp
src/SmartValueManager/: SmartValueManager.cpp
src/SoundManager/: SoundManagerAndroid.cpp  SoundManagerDataTypes.cpp  SoundManagerIos.mm  SoundManagerWindows.cpp
src/TextureManager/: SalmonTexture.cpp
src/Utils/: JSONVectorReader.cpp  JpegHelper.cpp  ObjHelper.cpp  PngHelper.cpp  SimpleTimer.cpp  TgaLoader.cpp  ThreadUtils.cpp
windows.universal/Engine/: Engine.VC.VC.opendb  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  packages.config
windows.universal/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
windows.universal/libpng/: libpng.sln  libpng.vcxproj  libpng.vcxproj.filters
windows/Engine/: Engine.sln  Engine.vcxproj  Engine.vcxproj.filters
windows/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
windows/libpng/: libpng.vcxproj  libpng.vcxproj.filters
(+145 files in other folders)
